kubernetes/charts/grafana/patches/istio.yaml
#Gateway
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: grafana-gw
  namespace: istio-system
spec:
  servers:
    - hosts:
        - grafana.ops.cluster.yanychoi.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: grafana-tls
        mode: SIMPLE
    - hosts:
        - grafana.ops.cluster.yanychoi.com
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    app: istio-ingressgateway
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: grafana 
spec:
  hosts:
  - grafana.ops.cluster.yanychoi.com
  gateways:
  - istio-system/grafana-gw
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: grafana
